Finally have the transpilation of the Broad WDL task working.